[fix] ログインをメアドに変えて、テストが通るように修正
